force-app/main/default/objects/Service_Order__c/Service_Order__c.object-meta.xml
<CustomObject>
    <label>Service Orders</label>
    <nameField>
        <label>Service Orders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Orderss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>