force-app/main/default/objects/Service_Order__c/fields/Contact_Cellular_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cellular_Number__c</fullName>
    <label>Contact Cellular Number</label>
    <type>Phone</type>
</CustomField>