force-app/main/default/objects/Service_Order__c/fields/Customer_Desire_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Desire_Due_Date__c</fullName>
    <label>Customer Desire Due Date</label>
    <type>Date</type>
</CustomField>