force-app/main/default/objects/Service_Order__c/fields/Date_entered__c.field-meta.xml
<CustomField>
    <fullName>Date_entered__c</fullName>
    <label>Date entered</label>
    <type>Date</type>
</CustomField>