force-app/main/default/objects/Service_Order__c/fields/M6_DPI_Flag__c.field-meta.xml
<CustomField>
    <fullName>M6_DPI_Flag__c</fullName>
    <label>M6/DPI Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>