force-app/main/default/objects/Service_Order__c/fields/Ordered_ACTIVITY__c.field-meta.xml
<CustomField>
    <fullName>Ordered_ACTIVITY__c</fullName>
    <label>Ordered Activity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>