force-app/main/default/objects/Service_Order__c/fields/Ordered_By_First__c.field-meta.xml
<CustomField>
    <fullName>Ordered_By_First__c</fullName>
    <label>Ordered By First</label>
    <length>25</length>
    <type>Text</type>
</CustomField>