force-app/main/default/objects/Service_Order__c/fields/Ordered_By_TN__c.field-meta.xml
<CustomField>
    <fullName>Ordered_By_TN__c</fullName>
    <label>Ordered By TN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>