force-app/main/default/objects/Service_Order__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>