force-app/main/default/objects/Service_Order__c/fields/Service_TN__c.field-meta.xml
<CustomField>
    <fullName>Service_TN__c</fullName>
    <label>Service TN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>